# apple-health-mcp-server

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: db.rs  lib.rs  main.rs  models.rs
src/import/: ecg.rs  gpx.rs  mod.rs  xml.rs
src/server/: mod.rs  tools.rs
tests/: test_db.rs  test_import_full.rs  test_server_tools.rs
tests/common/: mod.rs
