[package]
name = "apple-health-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "apple_health_mcp"
path = "src/lib.rs"

[[bin]]
name = "apple-health-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.16", features = ["server", "macros", "transport-streamable-http-server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
duckdb = { version = "1", features = ["bundled"] }
quick-xml = "0.37"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
